# iced-builder

./: Cargo.toml  README.md  project_plan.md  scope.md  status.md
examples/: layout.ron
examples/sample_project/: iced_builder.toml  layout.ron
examples/test/: iced_builder.toml  layout.ron
src/: app.rs  logging.rs  main.rs  util.rs
src/codegen/: generator.rs  mod.rs
src/io/: config.rs  layout_file.rs  mod.rs
src/model/: history.rs  layout.rs  mod.rs  project.rs
src/ui/: canvas.rs  inspector.rs  mod.rs  palette.rs  tree_view.rs
