[package]
name = "iced_builder"
version = "0.0.2"
edition = "2021"
description = "A visual GUI builder for Iced applications"
license = "MIT"
repository = "https://github.com/ChristopherHardiman/iced-builder"
keywords = ["gui", "iced", "builder", "visual", "ui"]
categories = ["gui", "development-tools"]

[dependencies]
# GUI framework
iced = { version = "0.13", features = ["advanced"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
toml = "0.8"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# File dialogs
rfd = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Validation
regex = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
